{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 126,
  "lineage": "b37dace4-f7ee-e0d1-be1e-bd33b47cd3ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ohEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eef7b7464696b4b",
            "domain": "vpc",
            "id": "eipalloc-07eef7b7464696b4b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-157-104.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.157.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-EIP"
            },
            "tags_all": {
              "Name": "eks-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ohIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:internet-gateway/igw-050fcad20af1fc1cd",
            "id": "igw-050fcad20af1fc1cd",
            "owner_id": "589634832240",
            "tags": {
              "Name": "terraform-eks-ohIG"
            },
            "tags_all": {
              "Name": "terraform-eks-ohIG"
            },
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "dependencies": [
            "aws_vpc.ohVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ohNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eef7b7464696b4b",
            "association_id": "eipassoc-094a5df28772c1361",
            "connectivity_type": "public",
            "id": "nat-0d48d7a25c222afce",
            "network_interface_id": "eni-05817e689337b0b71",
            "private_ip": "20.0.0.151",
            "public_ip": "3.37.157.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080c074cd6a29746c",
            "tags": {
              "Name": "eks-NAT"
            },
            "tags_all": {
              "Name": "eks-NAT"
            }
          },
          "dependencies": [
            "aws_eip.ohEIP",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:route-table/rtb-0441e1e5466a8f23c",
            "id": "rtb-0441e1e5466a8f23c",
            "owner_id": "589634832240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d48d7a25c222afce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-ohPrivateRT"
            },
            "tags_all": {
              "Name": "eks-ohPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ohEIP",
            "aws_nat_gateway.ohNAT",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:route-table/rtb-0d85bd2ada8c261b1",
            "id": "rtb-0d85bd2ada8c261b1",
            "owner_id": "589634832240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050fcad20af1fc1cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-ohPublicRT"
            },
            "tags_all": {
              "Name": "eks-ohPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ohIG",
            "aws_vpc.ohVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07384c97e8783452f",
            "route_table_id": "rtb-0441e1e5466a8f23c",
            "subnet_id": "subnet-0776c905e977c4c4f"
          },
          "dependencies": [
            "aws_eip.ohEIP",
            "aws_nat_gateway.ohNAT",
            "aws_route_table.ohPrivateRT",
            "aws_subnet.ohPrivateSN",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05aa4de2ebbc9d1b4",
            "route_table_id": "rtb-0441e1e5466a8f23c",
            "subnet_id": "subnet-0c2d2eb1619bd1051"
          },
          "dependencies": [
            "aws_eip.ohEIP",
            "aws_nat_gateway.ohNAT",
            "aws_route_table.ohPrivateRT",
            "aws_subnet.ohPrivateSN",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08191e571cf8f7b1f",
            "route_table_id": "rtb-0d85bd2ada8c261b1",
            "subnet_id": "subnet-080c074cd6a29746c"
          },
          "dependencies": [
            "aws_internet_gateway.ohIG",
            "aws_route_table.ohRT",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01358bab3e459d91c",
            "route_table_id": "rtb-0d85bd2ada8c261b1",
            "subnet_id": "subnet-0de8830be76375ac3"
          },
          "dependencies": [
            "aws_internet_gateway.ohIG",
            "aws_route_table.ohRT",
            "aws_subnet.ohPublicSN",
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ohCluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:security-group/sg-0a164d2b7aaa1ceaf",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a164d2b7aaa1ceaf",
            "ingress": [],
            "name": "terraform-eks-ohCluster",
            "name_prefix": "",
            "owner_id": "589634832240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-cluster SG"
            },
            "tags_all": {
              "Name": "terraform-eks-cluster SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ohCluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "121.130.76.1/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2922169487",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a164d2b7aaa1ceaf",
            "security_group_rule_id": "sgr-09eab29e1150445bd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ohCluster",
            "aws_vpc.ohVpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohPrivateSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-0776c905e977c4c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0776c905e977c4c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-ohPrivateSN-0",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-ohPrivateSN-0",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "dependencies": [
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-0c2d2eb1619bd1051",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2d2eb1619bd1051",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-ohPrivateSN-1",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-ohPrivateSN-1",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "dependencies": [
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohPublicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-080c074cd6a29746c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080c074cd6a29746c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-ohPublicSN-0",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-ohPublicSN-0",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "dependencies": [
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:subnet/subnet-0de8830be76375ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de8830be76375ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "589634832240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-ohPublicSN-1",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-ohPublicSN-1",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "vpc_id": "vpc-0c0a456c4000650c0"
          },
          "dependencies": [
            "aws_vpc.ohVpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ohVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:589634832240:vpc/vpc-0c0a456c4000650c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0d5c76bc2a92b1f6a",
            "default_route_table_id": "rtb-0871a96230174ce8d",
            "default_security_group_id": "sg-0d60a144435de8d8c",
            "dhcp_options_id": "dopt-031d2f2c4acd1c150",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c0a456c4000650c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0871a96230174ce8d",
            "owner_id": "589634832240",
            "tags": {
              "Name": "terraform-eks-ohVpc",
              "kubernetes.io/cluster/ohCluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-ohVpc",
              "kubernetes.io/cluster/ohCluster": "shared"
            }
          }
        }
      ]
    }
  ]
}